# kaggle-aud-tps

./: README.md  fetch_kaggle_datasets.py  pyproject.toml  submission.csv  train.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
submission-stack/: submission.csv
tps/: __init__.py  optuna_params.py  trainer.py  training_config.py  utils.py
