[tool.poetry]
name = "kaggle-aug-tps"
version = "0.1.0"
description = "Kaggle TPS"
authors = ["Akansha"]

[tool.poetry.dependencies]
python = "3.9.6"
numpy = "^1.23.2"
pandas = "^1.4.3"
scikit-learn = "^1.1.2"
optuna = "^2.10.1"
kaggle = "^1.5.12"
pydantic = "^1.9.2"
mlxtend = "^0.20.0"
feature-engine = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
